--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <script>
             console.log("hello");
             console.log("hello");
+            console.log("hee")
         </script>
     </body>
 </html>
