--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             console.log("hello");
             console.log("hello");
             console.log("hee")
+            console.log('ahou')
         </script>
     </body>
 </html>
